# tagaspi

./: AUTHORS  Makefile.am  README.md  configure.ac
m4/: ax_check_cpus.m4  ax_check_extrae.m4  ax_check_gaspi.m4  ax_runtime_cpu_info.m4  flags.m4  gaspi.m4  libnuma.m4
src/c/: AckNotify.cpp  AckRead.cpp  AckWrite.cpp  AckWriteNotify.cpp  AsyncWaitall.cpp  AsyncWaitallReset.cpp  Initialization.cpp  Notify.cpp  NotifyAsyncWait.cpp  QueueGroups.cpp  Read.cpp  ReadList.cpp  Write.cpp  WriteList.cpp  WriteListNotify.cpp  WriteNotify.cpp  async_waitall_reset.c  init.c  notify.c  queue_groups.c  read.c  read_list.c  write.c  write_list.c  write_list_notify.c  write_notify.c
src/common/: Allocator.cpp  Allocator.hpp  Environment.cpp  Environment.hpp  HardwareInfo.hpp  MPSCLockFreeQueue.hpp  MPSCQueue.hpp  Polling.cpp  Polling.hpp  QueueGroup.hpp  RuntimeAPI.hpp  RuntimeInfo.hpp  SpinLock.hpp  Symbol.hpp  TaskingModel.cpp  TaskingModel.hpp  TaskingModelAPI.hpp  Utils.hpp  WaitingRange.hpp  WaitingRangeList.hpp  WaitingRangeQueue.hpp  environment.c  environment.h  mpsc_queue.h  polling.c  polling.h  queue_groups.h  runtime_api.h  spinlock.h  types.h  utils.h  waiting_ranges.h
src/common/util/: EnvironmentVariable.hpp  ErrorHandler.hpp  MPSCLockFreeQueue.hpp  RuntimeInfo.hpp  SpinLock.hpp  SymbolResolver.hpp  Utils.hpp
src/fortran/: TAGASPI.f90
src/include/: TAGASPI.h
